--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@ globals:
   SPREE_DEFAULT_CURRENCY: true
   SPREE_DEFAULT_LOCALE: true
   update_state: true
+  OAUTH_TOKEN: true
 
 env:
   browser: true
